--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, quia dolore? Quam omnis labore eum iste laboriosam tempore ducimus cumque qui aliquam. Modi sunt eaque repellendus deleniti quae officia impedit.</p>
-    
+    <h2>Shubham Tiwari</h2>
 </body>
 </html>
