--- a/index.html
+++ b/index.html
@@ -3,12 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Git</title>
+    <title>Home - My Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        header {
+            background: #007bff;
+            color: white;
+            padding: 15px 0;
+            font-size: 24px;
+        }
+        nav {
+            background: #0056b3;
+            padding: 10px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            display: inline-block;
+        }
+        nav a:hover {
+            background: #003d7a;
+        }
+        .container {
+            margin: 50px auto;
+            padding: 20px;
+            background: white;
+            width: 80%;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background: #333;
+            color: white;
+            padding: 10px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <p>Hello Every One Today we learn git </p>
-    <h1>hqcbdjhbhbvhbdfvbjvbhjgd</h1>
+    <header>
+        Welcome to My Website
+    </header>
     
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="login.html">Login</a>
+    </nav>
 
+    <div class="container">
+        <h1>Welcome to My Website</h1>
+        <p>This is a simple homepage built with HTML and CSS.</p>
+        <p>Use the navigation bar to explore other pages.</p>
+    </div>
+
+    <footer>
+        &copy; 2024 My Website | All Rights Reserved
+    </footer>
 </body>
 </html>
